--- a/app/portageapp/test/CMakeLists.txt
+++ b/app/portageapp/test/CMakeLists.txt
@@ -17,7 +17,9 @@ macro(ADD_SPECIFIC_APPTEST TYPE SUFFIX)
   add_test(NAME portageapp_${TYPE}_${SUFFIX}
     COMMAND ./portageapp_${TYPE}_${SUFFIX}.sh)
   set_property(TEST portageapp_${TYPE}_${SUFFIX}
-    PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
+    PROPERTY ENVIRONMENT
+    TESTAPPDIR=${CMAKE_CURRENT_BINARY_DIR}/..
+    CMPAPPDIR=${CMAKE_BINARY_DIR}/app/apptest_cmp)
 endmacro(ADD_SPECIFIC_APPTEST)
 
 macro(ADD_PORTAGEAPP_TEST DIM ENTITY FIELDORDER REMAPORDER)
@@ -78,7 +80,9 @@ macro(ADD_UNSTRUC_TEST DIM ENTITY FIELDORDER REMAPORDER)
   add_test(NAME portageapp_jali_unstruc_${SUFFIX}
     COMMAND ./portageapp_jali_unstruc_${SUFFIX}.sh)
   set_property(TEST portageapp_jali_unstruc_${SUFFIX}
-    PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
+    PROPERTY ENVIRONMENT
+    TESTAPPDIR=${CMAKE_CURRENT_BINARY_DIR}/..
+    CMPAPPDIR=${CMAKE_BINARY_DIR}/app/apptest_cmp)
 endmacro(ADD_UNSTRUC_TEST)
 
 if (ENABLE_MPI AND Jali_DIR)
