--- a/app/simple_mesh_app/CMakeLists.txt
+++ b/app/simple_mesh_app/CMakeLists.txt
@@ -12,7 +12,7 @@ Please see the license file at the root of this repository, or at:
 # Simple_Mesh test
 add_executable(simple_mesh_app simple_mesh_app.cc)
 target_link_libraries(simple_mesh_app portage
-  ${EXTRA_LIBS} ${LAPACKE_LIBRARIES} ${MPI_CXX_LIBRARIES})
+  ${EXTRA_LIBS} ${LAPACKX_LIBRARIES} ${MPI_CXX_LIBRARIES})
 
 
 #TCMalloc option
