--- a/jenkins/axis_varan_pr.yml
+++ b/jenkins/axis_varan_pr.yml
@@ -9,8 +9,11 @@ BUILD_TYPE:
   - serial
   - thrust
   - flecsi
+  - readme
 
 exclude:
   - COMPILER: intel
     BUILD_TYPE: flecsi
+  - COMPILER: gcc
+    BUILD_TYPE: readme
 
