turned off timing app temporarily - do we need this?

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -13,9 +13,9 @@ add_subdirectory(msmapp)
 if (Jali_DIR OR ENABLE_FleCSI)
   add_subdirectory(portageapp)
 endif (Jali_DIR OR ENABLE_FleCSI)
-if (Jali_DIR)
-  add_subdirectory(timingapp)
-endif (Jali_DIR)
+#if (Jali_DIR)
+#  add_subdirectory(timingapp)
+#endif (Jali_DIR)
 if(TANGRAM_FOUND AND XMOF2D_FOUND)
   add_subdirectory(ir_linetest_app)
 endif(TANGRAM_FOUND AND XMOF2D_FOUND)
