--- a/portage/intersect/CMakeLists.txt
+++ b/portage/intersect/CMakeLists.txt
@@ -13,9 +13,12 @@ set(intersect_HEADERS
     clipper.hpp
     intersectClipper.h
     r2d.h
+    intersect_polys_r2d.h
     intersect_r2d.h
     r3d.h
+    intersect_polys_r3d.h
     intersect_r3d.h
+    dummy_interface_reconstructor.h
     PARENT_SCOPE
 )
 
@@ -54,7 +57,7 @@ if(ENABLE_UNIT_TESTS)
   if (TANGRAM_FOUND AND XMOF2D_FOUND)
        cinch_add_unit(test_tangram_intersect
        SOURCES test/test_tangram_intersect
-       LIBRARIES portage ${LAPACKE_LIBRARIES} ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
        POLICY MPI
        THREADS 1)       
   endif (TANGRAM_FOUND AND XMOF2D_FOUND)
