App for multi-material intersect on 2D meshes. Uses Tangram, Jali, and XMOF2D.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -18,5 +18,8 @@ if (Jali_DIR)
 endif (Jali_DIR)
 if(TANGRAM_FOUND AND XMOF2D_FOUND)
   add_subdirectory(ir_linetest_app)
+  if (Jali_DIR)
+    add_subdirectory(intersect_reconstruct_app)
+  endif (Jali_DIR)
 endif(TANGRAM_FOUND AND XMOF2D_FOUND)
 
