--- a/app/simple_mesh_app/test/CMakeLists.txt
+++ b/app/simple_mesh_app/test/CMakeLists.txt
@@ -41,3 +41,7 @@ ADD_SIMPLE_MESH_TEST(8)
 ADD_SIMPLE_MESH_TEST(9)
 ADD_SIMPLE_MESH_TEST(10)
 ADD_SIMPLE_MESH_TEST(11)
+
+file(COPY triple_point_3x3_matdata.dat DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY run_simple_mesh_mm_app.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
