--- a/app/portageapp/CMakeLists.txt
+++ b/app/portageapp/CMakeLists.txt
@@ -21,19 +21,19 @@ if (Jali_DIR)
     target_link_libraries(portageapp_jali ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
 
 
-#    add_executable(portageapp_multimat_jali portageapp_multimat_jali.cc)
-#    target_link_libraries(portageapp_multimat_jali portage ${EXTRA_LIBS} ${LAPACKX_LIBRARIES} ${XMOF2D_LIBRARIES})
+    add_executable(portageapp_multimat_jali portageapp_multimat_jali.cc)
+    target_link_libraries(portageapp_multimat_jali portage ${EXTRA_LIBS} ${LAPACKX_LIBRARIES} ${XMOF2D_LIBRARIES})
 
     # MPI additions - need to push this down into cinch
     if (ENABLE_MPI)
- #       target_link_libraries(portageapp_multimat_jali ${MPI_CXX_LIBRARIES})
- #       set_target_properties(portageapp_multimat_jali PROPERTIES
- #                             LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
+        target_link_libraries(portageapp_multimat_jali ${MPI_CXX_LIBRARIES})
+        set_target_properties(portageapp_multimat_jali PROPERTIES
+                              LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
     endif (ENABLE_MPI)
 
     # Jali additions
     include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
-   # target_link_libraries(portageapp_multimat_jali ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
+    target_link_libraries(portageapp_multimat_jali ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
 endif (Jali_DIR)
 
 # FleCSI example
@@ -73,7 +73,7 @@ if(ENABLE_TCMALLOC)
 
   if (Jali_DIR)
     target_link_libraries(portageapp_jali ${TCMALLOC_LIB})
- #   target_link_libraries(portageapp_multimat_jali ${TCMALLOC_LIB})
+    target_link_libraries(portageapp_multimat_jali ${TCMALLOC_LIB})
   endif (Jali_DIR)
   if (ENABLE_FleCSI)
     target_link_libraries(portageapp_flecsi ${TCMALLOC_LIB})
@@ -93,7 +93,7 @@ if(ENABLE_PROFILE)
 
   if (Jali_DIR)
     target_link_libraries(portageapp_jali ${VTUNE_LIB})
-  #  target_link_libraries(portageapp_multimat_jali ${VTUNE_LIB})
+    target_link_libraries(portageapp_multimat_jali ${VTUNE_LIB})
   endif (Jali_DIR)
   if (ENABLE_FleCSI)
     target_link_libraries(portageapp_flecsi ${VTUNE_LIB})
