--- a/app/portageapp/CMakeLists.txt
+++ b/app/portageapp/CMakeLists.txt
@@ -20,20 +20,21 @@ if (Jali_DIR)
     include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
     target_link_libraries(portageapp_jali ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
 
+    if (XMOF2D_FOUND)
+      add_executable(portageapp_multimat_jali portageapp_multimat_jali.cc)
+      target_link_libraries(portageapp_multimat_jali portage ${EXTRA_LIBS} ${LAPACKX_LIBRARIES} ${XMOF2D_LIBRARIES})
 
-    add_executable(portageapp_multimat_jali portageapp_multimat_jali.cc)
-    target_link_libraries(portageapp_multimat_jali portage ${EXTRA_LIBS} ${LAPACKX_LIBRARIES} ${XMOF2D_LIBRARIES})
+      # MPI additions - need to push this down into cinch
+      if (ENABLE_MPI)
+          target_link_libraries(portageapp_multimat_jali ${MPI_CXX_LIBRARIES})
+          set_target_properties(portageapp_multimat_jali PROPERTIES
+                                LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
+      endif (ENABLE_MPI)
 
-    # MPI additions - need to push this down into cinch
-    if (ENABLE_MPI)
-        target_link_libraries(portageapp_multimat_jali ${MPI_CXX_LIBRARIES})
-        set_target_properties(portageapp_multimat_jali PROPERTIES
-                              LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
-    endif (ENABLE_MPI)
-
-    # Jali additions
-    include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
-    target_link_libraries(portageapp_multimat_jali ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
+      # Jali additions
+      include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
+      target_link_libraries(portageapp_multimat_jali ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
+    endif (XMOF2D_FOUND)
 endif (Jali_DIR)
 
 # FleCSI example
