--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "cinch"]
 	path = cinch
 	url = ../../laristra/cinch.git
+[submodule "wonton"]
+	path = wonton
+	url = ssh://git@xcp-stash.lanl.gov:7999/laristra/wonton.git
+	branch = master
