initial swarmapp test files

--- a/app/swarmapp/CMakeLists.txt
+++ b/app/swarmapp/CMakeLists.txt
@@ -35,6 +35,6 @@ if(ENABLE_PROFILE)
 endif(ENABLE_PROFILE)
 
 
-#if (ENABLE_APP_TESTS)
-#  add_subdirectory(test)
-#endif (ENABLE_APP_TESTS)
+if (ENABLE_APP_TESTS)
+  add_subdirectory(test)
+endif (ENABLE_APP_TESTS)
