uncommented rest of tests

--- a/app/swarmapp/test/CMakeLists.txt
+++ b/app/swarmapp/test/CMakeLists.txt
@@ -25,23 +25,24 @@ macro(ADD_SWARMAPP_TEST EXAMPLE DISTRIBUTION)
 endmacro(ADD_SWARMAPP_TEST)
 
 ADD_SWARMAPP_TEST(0 0)
-#ADD_SWARMAPP_TEST(1 0)
-#ADD_SWARMAPP_TEST(2 0)
-#ADD_SWARMAPP_TEST(3 0)
-#ADD_SWARMAPP_TEST(4 0)
-#ADD_SWARMAPP_TEST(5 0)
-#ADD_SWARMAPP_TEST(6 0)
-#ADD_SWARMAPP_TEST(7 0)
-#ADD_SWARMAPP_TEST(8 0)
-#ADD_SWARMAPP_TEST(9 0)
-#ADD_SWARMAPP_TEST(0 1)
-#ADD_SWARMAPP_TEST(1 1)
-#ADD_SWARMAPP_TEST(2 1)
-#ADD_SWARMAPP_TEST(3 1)
-#ADD_SWARMAPP_TEST(4 1)
-#ADD_SWARMAPP_TEST(5 1)
-#ADD_SWARMAPP_TEST(6 1)
-#ADD_SWARMAPP_TEST(7 1)
-#ADD_SWARMAPP_TEST(8 1)
-#ADD_SWARMAPP_TEST(9 1)
+ADD_SWARMAPP_TEST(1 0)
+ADD_SWARMAPP_TEST(2 0)
+ADD_SWARMAPP_TEST(3 0)
+ADD_SWARMAPP_TEST(4 0)
+ADD_SWARMAPP_TEST(5 0)
+ADD_SWARMAPP_TEST(6 0)
+ADD_SWARMAPP_TEST(7 0)
+ADD_SWARMAPP_TEST(8 0)
+ADD_SWARMAPP_TEST(9 0)
+
+ADD_SWARMAPP_TEST(0 1)
+ADD_SWARMAPP_TEST(1 1)
+ADD_SWARMAPP_TEST(2 1)
+ADD_SWARMAPP_TEST(3 1)
+ADD_SWARMAPP_TEST(4 1)
+ADD_SWARMAPP_TEST(5 1)
+ADD_SWARMAPP_TEST(6 1)
+ADD_SWARMAPP_TEST(7 1)
+ADD_SWARMAPP_TEST(8 1)
+ADD_SWARMAPP_TEST(9 1)
 
