changes needed to switch to latest wonton

--- a/portage/intersect/CMakeLists.txt
+++ b/portage/intersect/CMakeLists.txt
@@ -12,10 +12,8 @@ Please see the license file at the root of this repository, or at:
 set(intersect_HEADERS
     clipper.hpp
     intersectClipper.h
-    r2d.h
     intersect_polys_r2d.h
     intersect_r2d.h
-    r3d.h
     intersect_polys_r3d.h
     intersect_r3d.h
     dummy_interface_reconstructor.h
@@ -25,8 +23,6 @@ set(intersect_HEADERS
 # Add source files
 set(intersect_SOURCES
     clipper.cpp
-    r2d.c
-    r3d.c
     PARENT_SCOPE
 )
 
@@ -42,14 +38,14 @@ if(ENABLE_UNIT_TESTS)
   endif (Jali_DIR)
 
   cinch_add_unit(intersect_r2d
-    SOURCES intersect_r2d_test.cc r2d.c
-    LIBRARIES 
+    SOURCES intersect_r2d_test.cc
+    LIBRARIES wonton
     POLICY SERIAL
     )
     
   cinch_add_unit(intersect_r3d
-    SOURCES intersect_r3d_test.cc r3d.c
-    LIBRARIES portage  
+    SOURCES intersect_r3d_test.cc
+    LIBRARIES portage wonton 
     POLICY SERIAL
     )
 
