changes needed to compile in serial (without and with Jali_DIR defined)

--- a/app/intersect_reconstruct_app/CMakeLists.txt
+++ b/app/intersect_reconstruct_app/CMakeLists.txt
@@ -7,27 +7,29 @@ Please see the license file at the root of this repository, or at:
 #-------------------------------------------------------------------------------
 # intersect_reconstruct_app - uses Jali and XMOF2D
 #-------------------------------------------------------------------------------
-add_executable(intersect_reconstruct_app intersect_reconstruct_app.cc)
-target_link_libraries(intersect_reconstruct_app
-                      portage ${LAPACKE_LIBRARIES} ${XMOF2D_LIBRARIES} 
-                      ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-                      ${MPI_CXX_LIBRARIES} ${EXTRA_LIBS})
-include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
+if(ENABLE_MPI)
+  add_executable(intersect_reconstruct_app intersect_reconstruct_app.cc)
+  target_link_libraries(intersect_reconstruct_app
+                        portage ${LAPACKE_LIBRARIES} ${XMOF2D_LIBRARIES} 
+                        ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+                        ${MPI_CXX_LIBRARIES} ${EXTRA_LIBS})
+  include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
 #TCMalloc option
-set(ENABLE_TCMALLOC TRUE CACHE BOOL "Use TCMalloc")
-if(ENABLE_TCMALLOC)
-  set(TCMALLOC_LIB "${HOME}" CACHE STRING "Set the TCMalloc library")
+  set(ENABLE_TCMALLOC TRUE CACHE BOOL "Use TCMalloc")
+  if(ENABLE_TCMALLOC)
+    set(TCMALLOC_LIB "${HOME}" CACHE STRING "Set the TCMalloc library")
 
-  target_link_libraries(intersect_reconstruct_app ${TCMALLOC_LIB})
-endif(ENABLE_TCMALLOC)
+    target_link_libraries(intersect_reconstruct_app ${TCMALLOC_LIB})
+  endif(ENABLE_TCMALLOC)
 
 # Profiling option (to allow pausing and resuming profiling during execution)
-set(ENABLE_PROFILE FALSE CACHE BOOL "Enable VTune Profiling")
-if(ENABLE_PROFILE)
-  set(VTUNE_INCLUDE_DIR "${HOME}" CACHE PATH "Set the locaiton of VTune include")
-  set(VTUNE_LIB "${HOME}" CACHE STRING "Set the VTune library")
+  set(ENABLE_PROFILE FALSE CACHE BOOL "Enable VTune Profiling")
+  if(ENABLE_PROFILE)
+    set(VTUNE_INCLUDE_DIR "${HOME}" CACHE PATH "Set the locaiton of VTune include")
+    set(VTUNE_LIB "${HOME}" CACHE STRING "Set the VTune library")
 
-  include_directories(${VTUNE_INCLUDE_DIR})
+    include_directories(${VTUNE_INCLUDE_DIR})
 
-  target_link_libraries(intersect_reconstruct_app ${VTUNE_LIB})
-endif(ENABLE_PROFILE)
+    target_link_libraries(intersect_reconstruct_app ${VTUNE_LIB})
+  endif(ENABLE_PROFILE)
+endif(ENABLE_MPI)
