update the header to say Portage instead of Wonton

--- a/cmake/portage_config.cmake.in
+++ b/cmake/portage_config.cmake.in
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------
-# This file is part of the Ristra Wonton project.
+# This file is part of the Ristra Portate project.
 # Please see the license file at the root of this repository, or at:
-#    https://github.com/laristra/wonton/blob/master/LICENSE
+#    https://github.com/laristra/portage/blob/master/LICENSE
 #
 # Portage configuration file template
 #
