--- a/app/swarmapp/test/CMakeLists.txt
+++ b/app/swarmapp/test/CMakeLists.txt
@@ -44,3 +44,25 @@ ADD_SWARMAPP_TEST(7 1)
 ADD_SWARMAPP_TEST(8 1)
 ADD_SWARMAPP_TEST(9 1)
 
+ADD_SWARMAPP_TEST(10 0)
+ADD_SWARMAPP_TEST(11 0)
+ADD_SWARMAPP_TEST(12 0)
+ADD_SWARMAPP_TEST(13 0)
+ADD_SWARMAPP_TEST(14 0)
+ADD_SWARMAPP_TEST(15 0)
+ADD_SWARMAPP_TEST(16 0)
+ADD_SWARMAPP_TEST(17 0)
+ADD_SWARMAPP_TEST(18 0)
+ADD_SWARMAPP_TEST(19 0)
+
+ADD_SWARMAPP_TEST(10 1)
+ADD_SWARMAPP_TEST(11 1)
+ADD_SWARMAPP_TEST(12 1)
+ADD_SWARMAPP_TEST(13 1)
+ADD_SWARMAPP_TEST(14 1)
+ADD_SWARMAPP_TEST(15 1)
+ADD_SWARMAPP_TEST(16 1)
+ADD_SWARMAPP_TEST(17 1)
+ADD_SWARMAPP_TEST(18 1)
+ADD_SWARMAPP_TEST(19 1)
+
