--- a/app/swarmapp/CMakeLists.txt
+++ b/app/swarmapp/CMakeLists.txt
@@ -15,7 +15,7 @@ target_link_libraries(swarmapp portage
   ${EXTRA_LIBS} ${LAPACKX_LIBRARIES} ${MPI_CXX_LIBRARIES})
 
 # Compare
-add_executable(compare compare.cc)
+add_executable(swarmcompare swarmcompare.cc)
 
 #TCMalloc option
 set(ENABLE_TCMALLOC TRUE CACHE BOOL "Use TCMalloc")
