--- a/portage/driver/CMakeLists.txt
+++ b/portage/driver/CMakeLists.txt
@@ -67,24 +67,29 @@ if (ENABLE_UNIT_TESTS)
        POLICY MPI
        THREADS 1)
 
+     endif (TANGRAM_FOUND AND XMOF2D_FOUND)
+
+     if (TANGRAM_FOUND)
        cinch_add_unit(test_multimat_driver_distributed_r1
        SOURCES test/test_multimat_driver_distributed
-       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} 
        POLICY MPI
        THREADS 1)
 
        cinch_add_unit(test_multimat_driver_distributed_r2
        SOURCES test/test_multimat_driver_distributed
-       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} 
        POLICY MPI
        THREADS 2)
 
        cinch_add_unit(test_multimat_driver_distributed_r4
        SOURCES test/test_multimat_driver_distributed
-       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} 
        POLICY MPI
        THREADS 4)
-     endif (TANGRAM_FOUND AND XMOF2D_FOUND)
+
+     endif (TANGRAM_FOUND)
+
    endif (Jali_DIR)
 
    cinch_add_unit(test_driver_swarm
