The multimat apptest shouldn't be triggered when portage is not build with xmof2d.

--- a/app/portageapp/test/CMakeLists.txt
+++ b/app/portageapp/test/CMakeLists.txt
@@ -113,7 +113,7 @@ if (ENABLE_MPI AND Jali_DIR)
 endif (ENABLE_MPI AND Jali_DIR)
 
 #multimat test
-if (Jali_DIR AND TANGRAM_FOUND)
+if (Jali_DIR AND XMOF2D_FOUND)
   file(COPY portageapp_multimat_jali_unstruc_2d_cell_f1_r2.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
   file(COPY gold/GOLD_multimat_jali_unstruc_2d_cell_f1_r2.gmv DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
   file(COPY ../../../test_data/reg10x10.exo
@@ -127,5 +127,5 @@ if (Jali_DIR AND TANGRAM_FOUND)
     TESTAPPDIR=${CMAKE_CURRENT_BINARY_DIR}/..
     CMPAPPDIR=${CMAKE_BINARY_DIR}/app/apptest_cmp)
 
-endif (Jali_DIR AND TANGRAM_FOUND)
+endif (Jali_DIR AND XMOF2D_FOUND)
 
