We only test the old FleCSI with gcc6.4.0

--- a/jenkins/axis_varan_pr.yml
+++ b/jenkins/axis_varan_pr.yml
@@ -16,4 +16,9 @@ exclude:
     BUILD_TYPE: flecsi
   - COMPILER: gcc6
     BUILD_TYPE: readme
+  - COMPILER: gcc7
+    BUILD_TYPE: readme
+  - COMPILER: gcc7
+    BUILD_TYPE: flecsi    
+
 
