--- a/portage/driver/CMakeLists.txt
+++ b/portage/driver/CMakeLists.txt
@@ -103,6 +103,12 @@ if (ENABLE_UNIT_TESTS)
        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        POLICY MPI
        THREADS 1)
+
+       cinch_add_unit(test_driver_part
+               SOURCES test/test_driver_part.cc
+               LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+               POLICY MPI
+               THREADS 1)
      
    endif (Jali_DIR)
 
